--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt": "~0.4.0"
   },
   "dependencies": {
-    "wiredep": "~1.4.0",
+    "wiredep": "git://github.com/hysios/wiredep.git",
     "bower-config": "~0.5.0"
   }
 }
